# Wlist-v0

./: .gitignore  Cargo.toml  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
run/: config.yml
runConfigurations/: Remote WList Server.run.xml  WList.run.xml  WListTestWithClient.run.xml
src/: file_lock.rs  global_configuration.rs  lib.rs  main.rs  print_table.rs
src/bytes/: bytes_util.rs  composite_reader.rs  index_reader.rs  mod.rs  vec_u8_reader.rs
src/handlers/: bytes_util.rs  client.rs  codec.rs  codecs.rs  common_handler.rs  failure_reason.rs  file_handler.rs  mod.rs  server_handler.rs  user_handler.rs
src/network/: client.rs  codecs.rs  mod.rs
src/operation/: mod.rs  permissions.rs  wrong_state_error.rs
src/operations/: permissions.rs  states.rs  types.rs  wrong_state_error.rs
src/options/: duplicate_policies.rs  mod.rs  order_directions.rs  order_policies.rs
src/structures/: file_information.rs  mod.rs  user_group_information.rs  user_information.rs
srcTODO/Driver_123pan/: DriverConfiguration_123pan.java  DriverHelper_123pan.java  DriverManager_123pan.java  Driver_123pan.java  Driver_123pan_NoCache.java  FileInformation_123pan.java  TrashHelper_123pan.java  TrashManager_123pan.java  Trash_123pan.java  Trash_123pan_NoCache.java
srcTODO/Lanzou/: DriverConfiguration_lanzou.java  DriverHelper_lanzou.java  DriverManager_lanzou.java  Driver_lanzou.java
srcTODO/LocalDisk/: FileInformation_LocalDisk.java  LocalDisk.java  LocalDiskManager.java
(+860 files in other folders)
