[package]
name = "wlist_client_library"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logger
log = "0.4.19"
chrono = "0.4.26"
# Cipher
rsa = "0.9.2"
aes = "0.8.2"
cbc = "0.1.2"
flate2 = "1.0.26"
