[package]
name = "WListClientConsole"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
env_logger = "0.10.0"
wlist_client_library = {path = "../wlist_client_library"}
serde_yaml = "0.9.21"
fs2 = "0.4.3"
memmap = "0.7.0"
md5 = "0.7.0"
